# Whenever

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  cli.py  export.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py  watch.py
.github/workflows/: ci.yml
config/: airports.json  country_seeds.yaml
docs/: API.md  ARCHITECTURE.md  flights-sky-api.md
docs/superpowers/plans/: 2026-06-23-roadmap.md  2026-06-23-test-ci-foundation.md  2026-06-24-streaming-search.md
templates/: index.html
tests/: conftest.py
tests/e2e/: conftest.py  test_autocomplete.py  test_cache_persist_stream.py  test_compare_providers_ui.py  test_demo_mode_ui.py  test_export.py  test_export_ui.py  test_google_provider.py  test_provider_retry.py  test_providers_health.py  test_quota_guard.py  test_rate_limit.py  test_rec_markdown.py  test_share_link.py  test_states_mobile.py  test_stream_ui.py  test_top_cities.py  test_ui.py  test_watch_scheduler.py  test_watch_ui.py
tests/fixtures/: google_search_roundtrip.json
tests/unit/: test_cache.py  test_cache_persist.py  test_cli.py  test_concurrent_search.py  test_default_model.py  test_demo_mode.py  test_dotenv.py  test_export.py  test_fares.py  test_google_contract.py  test_helpers.py  test_ollama.py  test_port.py  test_rate_limit.py  test_routes.py  test_run_search.py  test_search_args_helper.py  test_skyscanner_search_timeout_default.py  test_smoke.py  test_stream.py  test_suggest.py  test_top_cities_seeds.py  test_watch.py  test_watch_routes.py
(+1 files in other folders)
