[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whenever"
version = "0.1.0"
description = "Flexible-trip best-value flight finder"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
    "requests>=2.31",
]

[project.scripts]
whenever = "cli:main"

[tool.setuptools]
py-modules = ["app", "cli"]
